--- a/styles/common.css
+++ b/styles/common.css
@@ -9,19 +9,25 @@ div.main-container {
 
 div.left {
   float: left;
-  width: 50%;
+  width: 70%;
   height: 100%;
-  background-color: red;
 }
 
 div.right {
   float: right;
-  width: 50%;
+  width: 30%;
   height: 100%;
-  background-color: blue;
 }
 
 iframe {
   width: 100%;
+  height: 100%;
+}
+
+html {
+  height: 100%;
+}
+
+body {
   height: 100%;
 }
