--- a/styles/list.css
+++ b/styles/list.css
@@ -9,3 +9,13 @@ table {
   width: 100%;
   height: 100%;
 }
+div.temp {
+  background-color: black;
+  height: 100px;
+  width: 100px;
+}
+img.icon {
+  height: 20px;
+  width: 20px;
+  float: right;
+}
